Add new config property: CONFIG_MODE